添加灵视功能